# MS-Teams-Subscription-Notification

./: .env.example  .gitignore  DELEGATED_SUBSCRIPTIONS_GUIDE.md  FLOW.md  JOURNEY.md  LICENSE  OAUTH_GUIDE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  graph_client.py  main.py  schema.py  storage.py  subscription.py  utils.py  worker.py
app/static/: index.html
examples/: sample_message_response.json  sample_notification.json
scripts/: create_subscription.py  get_chat_ids.py
tests/: conftest.py  test_normalize.py  test_subscription.py
